--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -1,42 +1,49 @@
-# MySQL.  Versions 4.1 and 5.0 are recommended.
-# 
-# Install the MYSQL driver
-#   gem install mysql2
+# Database configuration
+# ======================
+# This file can be use as a template for the database.yml file.
 #
-# Ensure the MySQL gem is defined in your Gemfile
-#   gem 'mysql2'
+# If you're using the SQLite3 file-based database, all you have
+# to do is copy this file to database.yml.
 #
-# And be sure to use new-style password hashing:
-#   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
-development:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: pintosign_development
-  pool: 5
-  username: root
-  password:
-  socket: /tmp/mysql.sock
+# For production environments MySQL is a better fit. In this
+# case you need to setup the databases and adapt this file:
+#
+# 1. create the database and grant access
+# 2. change the '*sqlite' instances in the Environments section
+#    to '*mysql'
+# 3. add username and password and possibly host settings in
+#    the environment config.
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: pintosign_test
-  pool: 5
-  username: root
-  password:
-  socket: /tmp/mysql.sock
+# Common settings
+# ===============
+# SQLite3
+sqlite: &sqlite
+  adapter: sqlite3
+  pool:    5
+  timeout: 5000
 
+# MySQL
+mysql: &mysql
+  adapter:  mysql2
+  pool:     5
+  timeout:  5000
+  host:     localhost
+  encoding: utf8
+
+# Environments
+# ============
 production:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: pintosign_production
-  pool: 5
-  username: root
-  password:
-  socket: /tmp/mysql.sock
+  database: db/production.sqlite3
+  <<: *sqlite
+
+development:
+  database: db/development.sqlite3
+  <<: *sqlite
+
+staging:
+  database: db/staging.sqlite3
+  <<: *sqlite
+
+test:
+  database: db/test.sqlite3
+  <<: *sqlite
